Fixed footer spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,12 @@ header > h5 {
 footer {
   background-color: rgba(0,0,0,0.25);
   border-top: 1px rgba(255,255,255,0.25) solid;
+  padding: 15px;
 }
 
 footer > p {
   text-align: right;
-  margin-right: 15px;
+  margin: 0px;
 }
 
 #about {
